Added keyboard shortcuts.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <![endif]-->
 
     <script src="./js/jquery-1.9.1.min.js"></script>
+    <script src="./js/jquery.hotkeys.js"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
 
     <script src="js/zip.js"></script>
