Typography, visual, and copy tweaks.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         font-family: "Open Sans", Helvetica, Arial, Sans-serif;
       }
       body {
-        background: #171717 url('HTML5_1Color_Black.png') no-repeat bottom right;
+        background: #171717 url('html5_logo.png') no-repeat bottom right;
         background-size: 256px 256px;
         color: #999;
       }
